# ScintParallelMC

./: .gitignore  AnalyzeWaveformsRDF.cpp  CMakeLists.txt  README.md
cuda/: PhotonSimulationCUDA.cu  PhotonSimulationCUDA.cuh
include/: EventData.h  Geometry.h  PMTResponseROOT.h  PhotonSimulation.h  PhotonTransport.h
src/: Geometry.cpp  PMTResponseROOT.cpp  PhotonSimulation.cpp  PhotonTransport.cpp  PhotonTranspport.cpp
tests/: CMakeLists.txt  CompareCPUvsGPU.cpp  TestEventBatchGPU.cu  TestEventWaveformsROOT.cpp  TestGeometry.cpp  TestManyPhotonsCPU.cpp  TestManyPhotonsGPU.cu  TestManyPhotonsGPUReal.cu  TestReflection.cpp  TestScanWaveformsROOT.cpp  TestSinglePhoton.cpp
